[project]
authors = [
    {name="Tom Schoonjans", email="Tom.Schoonjans@gmail.com"}
]
description = "pip-installable xraylib"
requires-python = "~=3.7"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy"
]

[project.urls]
repository = "https://github.com/tschoonj/xraylib"
documentation = "https://github.com/tschoonj/xraylib"

[build-system]
requires = ["mesonpep517>=0.3", "ninja", "Cython", "numpy"]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
meson-python-option-name = "python"
meson-options = [
  "-Ddefault_library=static",
  "-Dpython-bindings=enabled",
  "-Dpython-numpy-bindings=enabled"
]
summary = "pip-installable xraylib"