[project]
name = "xraylib"
authors = [
    {name="Tom Schoonjans", email="Tom.Schoonjans@gmail.com"}
]
description = "pip-installable xraylib"
requires-python = "~=3.8"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy"
]
version = "4.2.0"

[project.urls]
repository = "https://github.com/tschoonj/xraylib"
documentation = "https://github.com/tschoonj/xraylib"

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'Cython', 'ninja', 'numpy']

[tool.meson-python.args]
setup = [
  "-Ddefault_library=static",
  "-Dpython-bindings=enabled",
  "-Dpython-numpy-bindings=enabled",
  "-Dfortran-bindings=disabled",
  "--vsenv"
]
install = ['--tags=python-runtime']

[tool.cibuildwheel]
skip = ["*-win32", "*-manylinux_i686", "pp*", "*musllinux*"]
build-verbosity = 1
test-command = [
  'python -c "import xraylib"',
  'python -c "import xraylib_np"',
]
test-skip = "cp38-macosx_*:arm64"