xraylibincludedir = ${includedir}/xraylib

xraylibinclude_HEADERS = 	xraylib.h \
				xraylib-lines.h \
				xraylib-shells.h \
				xraylib-parser.h \
				xraylib-auger.h \
				xraylib-defs.h \
				xraylib-crystal-diffraction.h \
				xraylib-nist-compounds.h \
				xraylib-radionuclides.h \
				xraylib-error.h \
				xraylib-deprecated.h \
				xraylib-aux.h

EXTRA_DIST = meson.build
