xraylib_headers = files(
    'xraylib.h',
    'xraylib-lines.h',
    'xraylib-shells.h',
    'xraylib-parser.h',
    'xraylib-auger.h',
    'xraylib-defs.h',
    'xraylib-crystal-diffraction.h',
    'xraylib-nist-compounds.h',
    'xraylib-radionuclides.h',
    'xraylib-error.h',
    'xraylib-deprecated.h',
    'xraylib-aux.h',
)

install_headers(xraylib_headers, subdir: 'xraylib')

include_source_dir = meson.current_source_dir()